fix jdk17 build